Add appimage build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,24 @@ install:
   - sudo apt-get -y install libgtk2.0-dev
 
 script:
-  - ./configure
+  - mkdir app
+  - ./configure --prefix=`pwd`/app
   - make
+  - make install
+  - wget "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage"
+  - chmod +x appimagetool-x86_64.AppImage
+  - mv ./app/bin/gkamus ./app/AppRun
+  - mv ./app/share/pixmaps/gkamus.png ./app
+  - cat > ./app/gkamus.desktop <<EOF
+[Desktop Entry]
+Version=1.0
+Name=gKamus
+Comment=Simple English - Indonesian dictionary
+Exec=./AppRun
+Icon=gkamus
+Type=Application
+Categories=Utility;
+StartupNotify=true
+Terminal=false
+EOF
+  - ARCH=x86_64 ./appimagetool-x86_64.AppImage app
