--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,12 @@ script:
     Terminal=false
     EOF
   - ARCH=x86_64 ./appimagetool-x86_64.AppImage app
+
+deploy:
+  provider: releases
+  api_key: $GITHUB_TOKEN
+  file: "gKamus-x86_64.AppImage"
+  skip_cleanup: true
+  on:
+    tags: true
+    all_branches: true
